--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,7 +92,7 @@ html{
 
 	//=========== NORMAL SCREEN HEADER ===========//
 
-	header{
+	header {
 		background-color:#F5F5DC;
 		// display: block;
 		// width: 100%;
@@ -193,7 +193,7 @@ html{
 	}
 
 
-	header ul li{
+	header ul li {
 		// display: inline-block;
 		// margin: 0px auto;
 		// text-align: center;
@@ -205,7 +205,7 @@ html{
 	}
 
 
-	header a{
+	header a {
 		// display: block;
     // margin: 0px auto;
 		// padding-right: 40px;
@@ -250,6 +250,75 @@ html{
 		// background: rgba(0,0,0,0.8);
 		// height: 87px;
 		transform: scale(1.25,1.25);
+	}
+
+
+
+
+	// #subscriptionsHeaderList {
+	// 	display: flex; // Convierte el ul en un contenedor flexible
+	// 	justify-content: space-between; // Distribuye el espacio entre los elementos
+	// 	align-items: center; // Centra verticalmente los elementos
+	// 	list-style: none; // Quita los puntos de la lista
+	// 	padding: 0; // Elimina el padding por defecto
+	// 	margin: 0; // Elimina el margen por defecto
+	// }
+
+
+	// #subscriptionsHeaderTitleName {
+	// 	flex-grow: 1; // Hace que este li ocupe todo el espacio disponible
+	// 	text-align: center; // Centra el texto horizontalmente
+	//   }
+
+	//=========== NORMAL SCREEN SUBSCRIPTIONS HEADER ===========//
+
+	#normalScreenSubscriptionsHeader {
+		background-color: #F5F5DC;
+		// font-family: OpenSans-Regular !important;
+		// font-weight: normal;
+		// font-family: YesevaOne-Regula !important;
+		// font-family: Arial, Helvetica, sans-serif !important;
+					// font-family: monospace !important;
+		// font-family: cursive !important;
+		// font-family: OpenSans-Regular !important;
+		// font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
+		// font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+		// font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+		// font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
+		// font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+		font-size: 14px; 
+		color: rgb(80, 173, 17);
+		line-height: 70px;
+	}
+
+
+	#normalScreenSubscriptionsHeaderLogo {
+		align-items: center; /* Centra verticalmente */
+		text-decoration: none;
+		font-family: Arial, Helvetica, sans-serif !important;
+	}
+
+
+	#normalScreenHeaderSubscriptionsTitle {
+		font-size: 27px;
+		// font-weight: bold;
+			// font-family: OpenSans-Regular !important;
+		// font-weight: normal;
+		// font-family: YesevaOne-Regula !important;
+		// font-family: Arial, Helvetica, sans-serif !important;
+					// font-family: monospace !important;
+		// font-family: cursive !important;
+		font-family: OpenSans-Regular !important;
+		// font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
+		// font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+		// font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+		// font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
+		// font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+    	font-weight: normal;
+		letter-spacing: 0.1em;
+		// color: gray;
+		// color: rgb(80, 173, 17);
+		// height: 70px;
 	}
 
 
@@ -443,6 +512,16 @@ html{
 	// 	color: rgba(0, 0, 0, 0.5);
 	// }
 
+	footer {
+		background-color: #e3ebf4;
+		// border-top: 1px solid #f3ef11;
+		width: 100%;
+		margin: 0px auto;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		color: rgba(0, 0, 0, 0.5);
+	}
+
 
 }
 
@@ -461,7 +540,7 @@ html{
 
 	//=========== CELL PHONE HEADER ===========//
 
-	header {
+	#cellPhoneHeader {
 		background-color: #F5F5DC;
 		// font-family: OpenSans-Regular !important;
 		// font-weight: normal;
@@ -473,7 +552,7 @@ html{
 	}
 
 
-  header .row {
+  	#cellPhoneHeaderRow {
 		// display: block;
 		// width: 100%;
 		// height: inherit;
@@ -486,7 +565,7 @@ html{
 		// height: 80px; /* Asegura que el ul tenga la misma altura que la cabecera */
 	}
 
-  header .row #cellPhoneMenuLogoTit{
+  #cellPhoneHeaderLogoTit {
 		// display: block;
 		// width: 100%;
     	max-width: 75%;
@@ -501,7 +580,7 @@ html{
 	}
 
 
-	header .row #cellPhoneMenuButton {
+	#cellPhoneHeaderButtonDiv {
 		// display: inline-block;
 		// margin: 0px auto;
     	max-width: 25%;
@@ -513,57 +592,41 @@ html{
 		height: 100%; /* Asegura que los li ocupen toda la altura de la cabecera */
 	}
 
-
-	header a{
-		// display: block;
-    // margin: 0px auto;
-		// padding-right: 40px;
-		// padding-left: 40px;
-		// height: inherit;
-		// text-decoration: none;
-		// color: inherit;
-		// transition: all 300ms;
-		// height: 70px;
-
-		display: flex;
-		align-items: center; /* Centra el texto dentro del enlace */
-		padding: 0 30px; /* Reduce el padding lateral si es necesario */
-		height: 100%; /* Hace que los enlaces ocupen toda la altura */
-		text-decoration: none;
-		color: inherit;
-		transition: all 300ms;
+	#cellPhoneHeaderButton {
+		color: rgb(118, 204, 61);
 	}
 
 
+	#cellPhoneLogoHeader {
+		display: flex;
+		align-items: center; /* Centra verticalmente */
+		text-decoration: none;
 
-	// #phoneHeader{
-	// 	line-height: 50px;
-	// }
+		// display: block;
+		padding-right: 0px;
+		padding-left: 10px;
+		height: inherit;
+		color: inherit;
+		// transition: all 300ms;
+	}
+
+	#cellPhoneLogoImg {
+		width: 60px;
+		height: 60px;
+	}
 
 
-  #cellPhoneLogoHeader {
-    display: flex;
-    align-items: center; /* Centra verticalmente */
-    text-decoration: none;
-  }
-
-  #cellPhoneLogoImg {
-    width: 60px;
-    height: 60px;
-  }
-
-
-  #cellPhoneLogoText {
-    display: block;
-    // max-width: 140px;
-    text-align: left;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.2;
-    color: #757575; /* Cambia según tu diseño */
-    margin-left: 10px; /* Espacio entre logo y texto */
-    word-wrap: break-word; /* Asegura que el texto respete el ancho */
-  }
+	#cellPhoneLogoText {
+		display: block;
+		// max-width: 140px;
+		text-align: left;
+		font-weight: normal;
+		font-size: 14px;
+		line-height: 1.2;
+		color: #757575; /* Cambia según tu diseño */
+		margin-left: 10px; /* Espacio entre logo y texto */
+		word-wrap: break-word; /* Asegura que el texto respete el ancho */
+	}
 
 
 
@@ -574,9 +637,9 @@ html{
 
 
 
-	#cellPhoneMenuButton {
-		color: rgb(118, 204, 61);
-	}
+	// #cellPhoneMenuButton {
+	// 	color: rgb(118, 204, 61);
+	// }
 
 
   // #cellPhoneMenu {
@@ -584,16 +647,16 @@ html{
   // }
 
 
-	header a{
-		display: block;
-		padding-right: 0px;
-		padding-left: 10px;
-		height: inherit;
-		text-decoration: none;
-		color: inherit;
-		transition: all 300ms;
+	// #cellPhoneLogoHeader {
+		// display: block;
+		// padding-right: 0px;
+		// padding-left: 10px;
+		// height: inherit;
+		// text-decoration: none;
+		// color: inherit;
+		// transition: all 300ms;
 		// height: 70px;
-	}
+	// }
 
 
   // #logoCol {
@@ -604,10 +667,109 @@ html{
 
 	#team-logo-gama {
 		margin: 0px;
-		padding-top: 10px;
-		padding-left:10%;
-		width: 80%;
+		padding-top: 0px;
+		margin-left:15%;
+		width: 70%;
 	}
+
+
+	
+	#cellPhoneScreenMisionesSpan {
+		// cursor: pointer;
+		// display: block;
+		padding-right: 10px;
+		// padding-left: 10px;
+		height: inherit;
+		text-decoration: none;
+		color: inherit;
+		// transition: all 300ms;
+	}
+
+	// #cellPhoneScreenMisionesSpan:hover{
+	// 	// background: rgba(0,0,0,0.8);
+	// 	// height: 87px;
+	// 	transform: scale(1.25,1.25);
+	// }
+
+	//=========== CELL PHONE SUBSCRIPTIONS HEADER ===========//
+
+	#cellPhoneSubscriptionsHeader {
+		background-color: #F5F5DC;
+		// font-family: OpenSans-Regular !important;
+		// font-weight: normal;
+		// font-family: YesevaOne-Regula !important;
+		font-family: Arial, Helvetica, sans-serif !important;
+					// font-family: monospace !important;
+		// font-family: cursive !important;
+		// font-family: OpenSans-Regular !important;
+		// font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
+		// font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+		// font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+		// font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
+		// font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+		font-size: 14px; 
+		color: rgb(80, 173, 17);
+		line-height: 70px;
+	}
+
+
+  	#cellPhoneSubscriptionsHeaderRow {
+		// display: block;
+		// width: 100%;
+		// height: inherit;
+		// margin: 0px auto;
+		// margin-top: -3px;
+		display: flex; /* Usa flexbox para alinear los elementos */
+		align-items: center; /* Centra verticalmente los elementos */
+		justify-content: flex-start; /* Alinea los elementos a la izquierda */
+		padding: 0;
+		// height: 80px; /* Asegura que el ul tenga la misma altura que la cabecera */
+	}
+
+
+	#cellPhoneSubscriptionsHeaderLogoTit {
+		// display: block;
+		// width: 100%;
+    	max-width: 50%;
+		// height: inherit;
+		// margin: 0px auto;
+		// margin-top: -3px;
+		display: flex; /* Usa flexbox para alinear los elementos */
+		align-items: center; /* Centra verticalmente los elementos */
+		justify-content: flex-start; /* Alinea los elementos a la izquierda */
+		// padding-left: 10px;
+		// height: 80px; /* Asegura que el ul tenga la misma altura que la cabecera */
+	}
+
+
+	
+	#cellPhoneSubscriptionsHeaderTitle {
+		// display: inline-block;
+		// margin: 0px auto;
+    	max-width: 50%;
+		// text-align: right;
+		// line-height: 80px;
+		// display: flex; /* Asegura que el contenido dentro de los li también se alinee correctamente */
+		// align-items: center; /* Centra los elementos en el eje vertical */
+		text-align: right;
+		margin: 0;
+		height: 100%; /* Asegura que los li ocupen toda la altura de la cabecera */
+	}
+
+
+
+	#cellPhoneHeaderSubscriptionsTitle {
+		font-size: 16px;
+		// font-weight: bold;
+		// font-family: Arial, Helvetica, sans-serif !important;
+    	// font-weight: normal;
+		// color: gray;
+		// color: rgb(80, 173, 17);
+		// height: 70px;
+	}
+
+
+
 
 
 	#significadoGAMA {
@@ -744,6 +906,18 @@ html{
 //   color: rgba(0, 0, 0, 0.5);
 // }
 
+
+	footer{
+		background-color: #e3ebf4;
+		// border-top: 1px solid #f3ef11;
+		width: 100%;
+		margin: 0px auto;
+		padding-top: 15px;
+		padding-bottom: 15px;
+		color: rgba(0, 0, 0, 0.5);
+	}
+	
+
 }
 
 
@@ -790,14 +964,14 @@ html{
 
 /*Botones generales*/
 
-.text-gama {
-  color: #88af27 !important;
-  font-weight: 600;
-}
+// .text-gama {
+//   color: #88af27 !important;
+//   font-weight: 600;
+// }
 
-.text-gama:hover {
-  color: white;
-}
+// .text-gama:hover {
+//   color: white;
+// }
 
 .modal-content {
   position: relative;
@@ -926,20 +1100,20 @@ body {
 }
 */
 
-footer {
-  background-color: white;
-  border: 1px solid #fece15;
-}
+// footer {
+//   background-color: white;
+//   border: 1px solid #fece15;
+// }
 
-footer a {
-  color: #88af27;
-}
+// footer a {
+//   color: #88af27;
+// }
 
-footer a:hover {
-  color: #fece15;
-  font-weight: bold;
-  text-decoration: none;
-}
+// footer a:hover {
+//   color: #fece15;
+//   font-weight: bold;
+//   text-decoration: none;
+// }
 /*
 .a{
 	color: orange;
