Creacion Privacidad en Unete. Otros.

--- a/src/app/layouts/unete-misiones/privacy-modal/privacy-modal/privacy-modal.component.html
+++ b/src/app/layouts/unete-misiones/privacy-modal/privacy-modal/privacy-modal.component.html
@@ -1,5 +1,8 @@
 <h2 mat-dialog-title>Política de Privacidad</h2>
-<!-- <mat-dialog-content>
+<mat-dialog-content>
+  <p>
+    <strong><ins> AQUÍ VA EL TEXTO QUE GUILLERMO TIENE QUE CONFECCIONAR. </ins></strong>
+  </p>
   <p>
     Aquí va el texto legal de la política de privacidad. Puedes añadir todo el contenido necesario.
   </p>
@@ -12,6 +15,6 @@
     <li>Puedes ejercer tus derechos de acceso, rectificación y eliminación de datos.</li>
   </ul>
 </mat-dialog-content>
-<mat-dialog-actions> -->
+<mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
-<!-- </mat-dialog-actions> -->
+</mat-dialog-actions>
