--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -1,32 +1,3 @@
-<!-- <nav id="header" class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container">
-      <a class="navbar-brand logo" id="logoCabecera"  href="#">
-        <img src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION">
-        GAMA
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#identidad">Quiénes somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#speakers">El Equipo</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#misiones">Únete a las misiones</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-gama" href="#" data-toggle="modal" data-target="#modaloración">Petición de oración</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
-  <!-- <router-outlet></router-outlet> -->
 
   <!--======================================== -->
   <!--========= NORMAL SCREEN HEADER ========= -->
@@ -43,11 +14,7 @@
       <li id="headerSpace">&nbsp;</li>
       <li><a href="#identidad">QUIÉNES SOMOS</a></li>
       <li><a href="#speakers" >EL EQUIPO</a></li>
-      <!-- <li><a [routerLink]="['/create-project']" [routerLinkActive]="['actived']">Create project</a></li>	-->
       <li><span id="normalScreenMisionesSpan" (click)="irAUneteMisiones()">ÚNETE A LAS MISIONES</span></li>
-      <!-- <li><a routerLink="/unete-misiones">ÚNETE A LAS MISIONES</a></li> -->
-      
-      <!-- <li><a href="#modaloración">Petición de oración</a></li> -->
       <li>
         <a href="#" data-toggle="modal" data-target="#modaloración">PETICIÓN DE ORACIÓN</a>
       </li>
@@ -131,7 +98,9 @@
       
     </div>
   </section>
-  <!-- Identidad -->
+
+
+
   <!--Seminario-->
 <!--    <seminario id="seminario">
     <div id="seminario-announcement" class="carousel slide carousel-fade" data-ride="carousel"  data-pause="false">
@@ -159,7 +128,11 @@
   </tour> -->
   <!-- /tour-->
 
-  <!-- Speakers -->
+
+  <!--======================================== -->
+  <!--=============== SPEAKERS =============== -->
+  <!--======================================== -->
+
   <section id="speakers" class="mt-4">
     <div class="container">
       <div class="row">
@@ -200,7 +173,8 @@
       </div>
     </div>
   </section>
-  <!-- /Speakers -->
+
+  
   <!-- Lugar y Fecha -->
   <!--
   <section id="place-time">
@@ -220,7 +194,11 @@
   </section>
 -->
   <!-- /Lugar y Fecha -->
-  <!-- Unete a las misiones -->
+
+
+  <!--======================================== -->
+  <!--========= UNETE A LAS MISIONES ========= -->
+  <!--======================================== -->
   <section id="misiones" class="pt-3 pb-3">
     <div class="container">
       <div class="row">
@@ -261,7 +239,6 @@
       </div>
     </div>
   </section>
-  <!-- /Únete a las misiones -->
 
 
 
