--- a/src/app/layouts/unete-misiones/unete-misiones.component.html
+++ b/src/app/layouts/unete-misiones/unete-misiones.component.html
@@ -5,7 +5,7 @@
 
   <header id="normalScreenSubscriptionsHeader" class="d-none d-md-block">
     <ul>
-      <li id="headerName">      
+      <li id="headerIconText">      
         <a id="normalScreenSubscriptionsHeaderLogo" href="#">
           <img src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
           <span id="normalScreenLogoText">GAMA EVANGELISTIC <br> ASSOCIATION</span>
