--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -5,7 +5,7 @@
 
   <header class="d-none d-md-block">
     <ul>
-      <li id="headerName">      
+      <li id="headerIconText">      
         <a id="normalScreenHeaderLogo" href="#">
           <img src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
           <span id="normalScreenLogoText">GAMA EVANGELISTIC <br> ASSOCIATION</span>
@@ -207,9 +207,10 @@
           <h2>MISIONES</h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-2">
         <div class="col text-center">
-          Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>.
+          <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
+          Ponte en contacto con nosotros si te atrae la idea de participar en misiones, en colaboración con iglesias locales y JCUM.
          </div>
       </div>
       <div class="row">
