--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -274,7 +274,10 @@
     <div class="container">
       <div class="row text-center pb-1">
         <div class="col-12 col-lg">
-          <a data-toggle="modal" data-target="#modalcontacto" href="#">Contáctanos</a>
+          <!-- <a data-toggle="modal" data-target="#modalcontacto" href="#">Contáctanos</a> -->
+          <a href="#" (click)="openContactUsModal($event)" data-target="modalcontacto">
+            Contáctanos
+          </a>
         </div> 
       </div>
       <br>
