--- a/src/app/shared/prayer-request-modal/prayer-request-modal.component.html
+++ b/src/app/shared/prayer-request-modal/prayer-request-modal.component.html
@@ -4,8 +4,13 @@
     <mat-label>Compártenos tu petición o motivo de agradecimiento</mat-label>
     <textarea matInput [(ngModel)]="mensaje" name="mensaje" required></textarea>
   </mat-form-field>
+  <!-- Campo de correo electrónico -->
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Escríbenos tu e-mail</mat-label>
+    <input matInput [(ngModel)]="email" name="email" required email>
+  </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions class="dialog-actions">
   <button mat-button (click)="onCancel()" class="cancel-button">Cancelar</button>
-  <button mat-button (click)="onEnviar()" [disabled]="!mensaje" class="enviar-button">Enviar</button>
+  <button mat-button (click)="onEnviar()" [disabled]="!mensaje || !email" class="enviar-button">Enviar</button>
 </mat-dialog-actions>
