--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -7,7 +7,7 @@
     <ul>
       <li id="headerIconText">      
         <a id="normalScreenHeaderLogo" href="#">
-          <img src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
+          <img src="../assets/img/GAMAHeaderLogo.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
           <span id="normalScreenLogoText">GAMA EVANGELISTIC <br> ASSOCIATION</span>
         </a>
       </li>
@@ -35,7 +35,7 @@
 
       <div class="col" id="cellPhoneHeaderLogoTit">
         <a href="#" id="cellPhoneLogoHeader">
-          <img id="cellPhoneLogoImg" src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
+          <img id="cellPhoneLogoImg" src="../assets/img/GAMAHeaderLogo.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
           <span id="cellPhoneLogoText">GAMA <br> EVANGELISTIC <br> ASSOCIATION</span>
         </a>
       </div>
@@ -78,8 +78,14 @@
           </p>
         </div>
          
-        <div id="logoCol" class="col-md-12 col-lg-6 pb-4">
-          <img id="team-logo-gama" class="" src="../assets/img/logoGAMA.png" alt="Logotipo de GAMA">
+        <!--========= NORMAL SCREEN IDENTITY ========= -->
+        <div class="col-md-12 col-lg-6 pb-4 d-none d-md-block"> 
+          <img id="normal-screen-team-logo-gama" class="" src="../assets/img/GAMABodyLogo.png" alt="Logotipo de GAMA">
+        </div> 
+
+        <!--========== CELL PHONE IDENTITY  ========== -->
+        <div class="col-md-12 col-lg-6 pb-4 d-block d-md-none"> 
+          <img id="cell-phone-team-logo-gama" class="" src="../assets/img/GAMABodyLogo.png" alt="Logotipo de GAMA">
         </div> 
       
       
