--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,7 +122,7 @@ body {
 	}
 
 
-	#team-logo-gama {
+	#normal-screen-team-logo-gama {
 		margin: 0px;
 		padding-top: 10px;
 		padding: 0px;
@@ -481,7 +481,7 @@ body {
 
 
 
-	#team-logo-gama {
+	#cell-phone-team-logo-gama {
 		margin: 0px;
 		padding-top: 0px;
 		margin-left:15%;
