--- a/src/app/layouts/unete-misiones/unete-misiones.component.html
+++ b/src/app/layouts/unete-misiones/unete-misiones.component.html
@@ -7,7 +7,7 @@
     <ul>
       <li id="headerIconText">      
         <a id="normalScreenSubscriptionsHeaderLogo" href="#">
-          <img src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
+          <img src="../assets/img/GAMAHeaderLogo.png" alt="GAMA EVANGELISTIC ASSOCIATION" id="normalScreenLogoImg">
           <span id="normalScreenLogoText">GAMA EVANGELISTIC <br> ASSOCIATION</span>
         </a>
       </li>
@@ -29,7 +29,7 @@
 
       <div id="cellPhoneSubscriptionsHeaderLogoTit" class="col" >
         <a href="#" id="cellPhoneLogoHeader">
-          <img id="cellPhoneLogoImg" src="../assets/img/logoGAMA.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
+          <img id="cellPhoneLogoImg" src="../assets/img/GAMAHeaderLogo.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
           <span id="cellPhoneLogoText">GAMA <br> EVANGELISTIC <br> ASSOCIATION</span>
         </a>
       </div>
@@ -314,7 +314,7 @@
     <div class="container">
       <div class="row text-center pb-1">
         <div class="col-12 col-lg">
-          <a data-toggle="modal" data-target="#modalcontacto" href="#">Contáctanos</a>
+            <a href="#" (click)="openContactUsModal($event)" data-target="modalcontacto">Contáctanos</a>
         </div> 
       </div>
       <br>
