--- a/src/app/layouts/home/home.component.scss
+++ b/src/app/layouts/home/home.component.scss
@@ -29,7 +29,7 @@
       }
   
       mat-checkbox {
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
   
         a {
           color: #3f51b5;
